# Audion

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/audion/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/androidapp/: AudioStreamingActivity.java  Db_test.java  MainActivity.java  RNNoise.java
app/src/main/java/com/example/androidapp/data/: AppDatabase.java  User.java  UserDao.java
app/src/main/java/com/example/audion/: Db_test.java  GeneralInstructionActivity.java  HomeActivity.java  InstructionActivity.java  LeftEarInstructionActivity.java  MainActivity.java  PureToneTestActivity.java  RNNoise.java  RightEarInstructionActivity.java  SplashActivity.java  UserCreationActivity.java
app/src/main/java/com/example/audion/audio/: ToneGenerator.java
app/src/main/java/com/example/audion/data/: AppDatabase.java  HearingTestResult.java  HearingTestResultDao.java  User.java  UserDao.java
app/src/main/res/drawable/: edittext_border_green.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_audio_stream.xml  activity_general_instruction.xml  activity_instruction.xml  activity_left_ear_instruction.xml  activity_main.xml  activity_pure_tone_test.xml  activity_right_ear_instruction.xml  activity_splash.xml  db_check.xml  hearing_test_instructions.xml  user_creation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
